Refactor import/export context and writer hierarchies (#3217)