@@ -2,9 +2,9 @@ package org.labkey.experiment.samples;
 
 import org.labkey.api.admin.BaseFolderWriter;
 import org.labkey.api.admin.FolderArchiveDataTypes;
+import org.labkey.api.admin.FolderExportContext;
 import org.labkey.api.admin.FolderWriter;
 import org.labkey.api.admin.FolderWriterFactory;
-import org.labkey.api.admin.ImportContext;
 import org.labkey.api.attachments.AttachmentParent;
 import org.labkey.api.attachments.AttachmentService;
 import org.labkey.api.collections.CaseInsensitiveHashSet;
@@ -57,7 +57,6 @@ import org.labkey.experiment.XarExporter;
 import org.labkey.experiment.api.AliasInsertHelper;
 import org.labkey.experiment.api.ExpDataClassAttachmentParent;
 import org.labkey.experiment.xar.XarExportSelection;
-import org.labkey.folder.xml.FolderDocument;
 
 import java.io.IOException;
 import java.io.InputStream;
@@ -107,7 +106,7 @@ public class SampleTypeAndDataClassFolderWriter extends BaseFolderWriter
     }
 
     @Override
-    public void write(Container object, ImportContext<FolderDocument.Folder> ctx, VirtualFile vf) throws Exception
+    public void write(Container c, FolderExportContext ctx, VirtualFile vf) throws Exception
     {
         // We will divide the sample type and data class definitions from the runs into two separate XAR files, the reason is
         // during import we want all data to be imported via the query update service and any lineage will be wired up
@@ -123,11 +122,12 @@ public class SampleTypeAndDataClassFolderWriter extends BaseFolderWriter
         boolean exportRuns = false;
         _xarCtx = ctx.getContext(XarExportContext.class);
 
-        Lsid sampleTypeLsid = new Lsid(ExperimentService.get().generateLSID(ctx.getContainer(), ExpSampleType.class, "export"));
-        for (ExpSampleType sampleType : SampleTypeService.get().getSampleTypes(ctx.getContainer(), ctx.getUser(), true))
+        Lsid sampleTypeLsid = new Lsid(ExperimentService.get().generateLSID(c, ExpSampleType.class, "export"));
+        for (ExpSampleType sampleType : SampleTypeService.get().getSampleTypes(c, ctx.getUser(), true))
         {
             // ignore the magic sample type that is used for the specimen repository, it is managed by the specimen importer
-            if (StudyService.get() != null && StudyService.get().getStudy(ctx.getContainer()) != null && SpecimenService.SAMPLE_TYPE_NAME.equals(sampleType.getName()))
+            StudyService ss = StudyService.get();
+            if (ss != null && ss.getStudy(c) != null && SpecimenService.SAMPLE_TYPE_NAME.equals(sampleType.getName()))
                 continue;
 
             // ignore sample types that are filtered out
@@ -142,14 +142,14 @@ public class SampleTypeAndDataClassFolderWriter extends BaseFolderWriter
                 Set<Integer> includedSamples = _xarCtx != null ? _xarCtx.getIncludedSamples().get(sampleType.getRowId()) : null;
                 sampleTypes.add(sampleType);
                 typesSelection.addSampleType(sampleType);
-                materialsToExport.addAll(sampleType.getSamples(ctx.getContainer()).stream()
-                        .filter(m -> includedSamples == null || includedSamples.contains(m.getRowId()))
-                        .collect(Collectors.toList()));
+                materialsToExport.addAll(sampleType.getSamples(c).stream()
+                    .filter(m -> includedSamples == null || includedSamples.contains(m.getRowId()))
+                    .toList());
                 exportTypes = true;
             }
         }
 
-        for (ExpDataClass dataClass : ExperimentService.get().getDataClasses(ctx.getContainer(), ctx.getUser(), false))
+        for (ExpDataClass dataClass : ExperimentService.get().getDataClasses(c, ctx.getUser(), false))
         {
             // ignore data classes that are filtered out
             if (_xarCtx != null && !_xarCtx.getIncludedDataClasses().containsKey(dataClass.getRowId()))
@@ -159,8 +159,8 @@ public class SampleTypeAndDataClassFolderWriter extends BaseFolderWriter
             dataClasses.add(dataClass);
             typesSelection.addDataClass(dataClass);
             datasToExport.addAll(dataClass.getDatas().stream()
-                    .filter(d -> includedDatas == null || includedDatas.contains(d.getRowId()))
-                    .collect(Collectors.toList()));
+                .filter(d -> includedDatas == null || includedDatas.contains(d.getRowId()))
+                .toList());
             exportTypes = true;
         }
 
@@ -215,7 +215,7 @@ public class SampleTypeAndDataClassFolderWriter extends BaseFolderWriter
         writeDataClassDataFiles(dataClasses, ctx, xarDir, relativizedLSIDs);
     }
 
-    private void writeSampleTypeDataFiles(Set<ExpSampleType> sampleTypes, ImportContext<FolderDocument.Folder> ctx, VirtualFile dir, LSIDRelativizer.RelativizedLSIDs relativizedLSIDs) throws Exception
+    private void writeSampleTypeDataFiles(Set<ExpSampleType> sampleTypes, FolderExportContext ctx, VirtualFile dir, LSIDRelativizer.RelativizedLSIDs relativizedLSIDs) throws Exception
     {
         // write out the sample rows
         UserSchema userSchema = QueryService.get().getUserSchema(ctx.getUser(), ctx.getContainer(), SamplesSchema.SCHEMA_NAME);
@@ -246,7 +246,7 @@ public class SampleTypeAndDataClassFolderWriter extends BaseFolderWriter
         }
     }
 
-    private void writeDataClassDataFiles(Set<ExpDataClass> dataClasses, ImportContext<FolderDocument.Folder> ctx, VirtualFile dir, LSIDRelativizer.RelativizedLSIDs relativizedLSIDs) throws Exception
+    private void writeDataClassDataFiles(Set<ExpDataClass> dataClasses, FolderExportContext ctx, VirtualFile dir, LSIDRelativizer.RelativizedLSIDs relativizedLSIDs) throws Exception
     {
         // write out the DataClass rows
         UserSchema userSchema = QueryService.get().getUserSchema(ctx.getUser(), ctx.getContainer(), ExpSchema.SCHEMA_EXP_DATA);
@@ -323,7 +323,7 @@ public class SampleTypeAndDataClassFolderWriter extends BaseFolderWriter
         return columns;
     }
 
-    private Collection<ColumnInfo> getColumnsToExport(ImportContext<FolderDocument.Folder> ctx, TableInfo tinfo, LSIDRelativizer.RelativizedLSIDs relativizedLSIDs)
+    private Collection<ColumnInfo> getColumnsToExport(FolderExportContext ctx, TableInfo tinfo, LSIDRelativizer.RelativizedLSIDs relativizedLSIDs)
     {
         Map<FieldKey, ColumnInfo> columns = new LinkedHashMap<>();
         Set<PropertyStorageSpec> baseProps = tinfo.getDomainKind().getBaseProperties(tinfo.getDomain());
